veecle-os-runtime-macros/tests/ui/storable/unimplemented_debug.stderr
error[E0277]: `Sensor` doesn't implement `Debug`
 --> tests/ui/storable/unimplemented_debug.rs:3:19
  |
3 | #[derive(Default, Storable)]
  |                   ^^^^^^^^ the trait `Debug` is not implemented for `Sensor`
  |
  = note: add `#[derive(Debug)]` to `Sensor` or manually `impl Debug for Sensor`
note: required by a bound in `veecle_os_runtime::Storable::DataType`
 --> $WORKSPACE/veecle-os-runtime/src/datastore/slot/storable.rs
  |
  |     type DataType: Debug;
  |                    ^^^^^ required by this bound in `Storable::DataType`
  = note: this error originates in the derive macro `Storable` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Sensor` with `#[derive(Debug)]`
  |
 4 + #[derive(Debug)]
 5 | pub struct Sensor;
   |

error[E0277]: `Data` doesn't implement `Debug`
 --> tests/ui/storable/unimplemented_debug.rs:9:24
  |
9 | #[storable(data_type = Data)]
  |                        ^^^^ the trait `Debug` is not implemented for `Data`
  |
  = note: add `#[derive(Debug)]` to `Data` or manually `impl Debug for Data`
note: required by a bound in `veecle_os_runtime::Storable::DataType`
 --> $WORKSPACE/veecle-os-runtime/src/datastore/slot/storable.rs
  |
  |     type DataType: Debug;
  |                    ^^^^^ required by this bound in `Storable::DataType`
help: consider annotating `Data` with `#[derive(Debug)]`
  |
 6 + #[derive(Debug)]
 7 | pub struct Data;
   |
